--- a/src/style.css
+++ b/src/style.css
@@ -67,17 +67,17 @@ h1 {
     border-radius:40px;
 }
 
-.slideshow-container {
+/* .slideshow-container {
     max-width: 1000px;
     position: relative;
     margin: auto;
-}
+} */
 
-.mySlides {
+/* .mySlides {
     display: none;
-}
+} */
 
-.fade {
+/* .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
@@ -92,7 +92,7 @@ h1 {
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
-}
+} */
 
 .prev, .next {
     cursor: pointer;
@@ -118,7 +118,7 @@ h1 {
     background-color: rgba(0,0,0,0.8);
 }
 
-.dot {
+/* .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
@@ -127,4 +127,4 @@ h1 {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-}
+} */
